find out more links added, typos and wording fixed

--- a/anfanifi.html
+++ b/anfanifi.html
@@ -18,10 +18,10 @@
 <body>
   <div class="overflow-hidden">
     <div class="bg__gray-2 position-relative">
-        <nav class="navbar navbar-expand-lg wrapper__navbar position-relative z-3 sticky-top" data-aos="fade-down"
+      <nav class="navbar navbar-expand-lg wrapper__navbar position-relative z-3 sticky-top" data-aos="fade-down"
         data-aos-duration="1000" ddata-aos-delay="300">
         <div class="container position-relative">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <img src="./assets/images/LOGO.svg" alt="" />
           </a>
           <button class="navbar-toggler nav__button position-relative" type="button" data-toggle="collapse"
@@ -31,10 +31,10 @@
             <span></span>
             <span></span>
           </button>
-  
+
           <div class="collapse navbar-collapse wrapper__navbar-menu center " id="navbarSupportedContent">
             <ul class="navbar-nav menu__center">
-  
+
               <li class="nav-item">
                 <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 active"
                   href="index.html">
@@ -42,26 +42,31 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1" href="#about">
+                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1"
+                  href="index.html#about">
                   about me
                 </a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 dropdown-toggle"
+                  href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                  aria-expanded="false">
                   Portfolio Projects
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="projects.html">All</a>
-                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="projects.html#hardware-projects">Hardware</a>
-                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="projects.html#digital-projects">Digital</a>
-                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="projects.html#fullstack-projects">Fullstack</a>
-                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href= "">Design (Coming soon)</a>
+                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
+                    href="projects.html#hardware-projects">Hardware</a>
+                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
+                    href="projects.html#digital-projects">Digital</a>
+                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
+                    href="projects.html#fullstack-projects">Fullstack</a>
+                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="">Design (Coming
+                    soon)</a>
                 </div>
               </li>
             </ul>
           </div>
-  
-  
         </div>
       </nav>
       <!--Project details-->
@@ -157,10 +162,12 @@
               </div>
               <div class="content col-12 col-md-6 col-lg-5 ">
                 <div>
+                  <a href="#overview" class="no-color-change">
                   <p class="font__size--20 bold  mb-2">
                     Find out more
                   </p>
                   <img src="./assets/images/Line 1.png" class="d-none d-md-block" alt="" />
+                </a>
                 </div>
               </div>
             </div>
@@ -172,7 +179,7 @@
 
 
     <!--Overview-->
-    <section>
+    <section id="overview">
       <div class="container ">
         <div class="text-center">
           <h2 class="bold font__size--40 text__40-1024 text__40-mm project-section-h-p" data-aos="fade-up"
@@ -187,15 +194,16 @@
         <div class="row">
           <div class="col-lg-6 " data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
             <p>
-              AnfaniFI is a platform that connects businesses and individuals across the African supply chain. It
-              empowers businesses to link opportunities with finance. By assessing operational, financial, and
-              behavioral data, AnfaniFI creates a network of trusted partners.
+              AnfaniFI is a platform that connects businesses and individuals across the African supply chain. By
+              assessing operational, financial, and
+              behavioral data, AnfaniFI creates a network of trusted partners and helps businesses link opportunity with
+              finance.
             </p>
-            <p>AnfaniFI launched Anfani360 in Sierra Leone. Anfani360 is a restaurant solution designed to empower
-              Africa's food service businesses. It offers a variety of features to help restaurants grow their business,
-              including online ordering, a 360 view of operations management, and driver management.
+            <p>In 2023, AnfaniFI launched Anfani360 in Sierra Leone, a comprehensive restaurant solution aimed at
+              empowering Africa's food service industry. The platform offers tools for growth, including online
+              ordering, streamlined operations management, and driver management.
             </p>
-            
+
           </div>
           <div class="col-lg-6 d-md-flex d-lg-block align-items-center justify-content-center" data-aos="fade-up"
             data-aos-duration="1000" data-aos-delay="600">
@@ -221,13 +229,13 @@
                 AnfaniFi's flagship product, Anfani360, was initially built on PHP. Recognizing the need for
                 modernization,
                 the project aimed to transition the codebase to a more current framework, enhancing performance,
-                scalability, and maintainability. The goal was to soft launch in Sierra Leone, focusing on acquiring
+                scalability, and maintainability. The goal was also to soft launch in Sierra Leone, focusing on acquiring
                 early
                 users, gathering their invaluable feedback, and creating a data-driven roadmap for future development.
 
               </p>
             </div>
-            <div class="col-md-7 col-lg-6 p-5 d-lg-none">
+            <div class="col-md-7 col-lg-6 p-0 p-md-5 d-lg-none">
               <img src="./assets/images/laptop.svg" alt="" />
             </div>
           </div>
@@ -270,7 +278,7 @@
 
               <ol>
                 <li>Collaborated to define clear project requirements.</li>
-                <li>worked with Dev team to micgrate tech stack for enhanced performance and scalability.</li>
+                <li>worked with Dev team to migrate tech stack for enhanced performance and scalability.</li>
                 <li>Developed an innovative mobile money payment solution.</li>
                 <li>Established feedback mechanisms and conducted user research for continuous improvement.</li>
                 <li>Digitised business operations leading to improved efficieny</li>
@@ -331,20 +339,20 @@
 
           </div>
           <div class="col-lg-6 d-md-flex d-lg-none align-items-center justify-content-center" data-aos="fade-up"
-            data-aos-duration="1000" data-aos-delay="600">
+            data-aos-duration="1000" data-aos-delay="300">
             <img src="./assets/images/anfani_process.png" alt="" class="shadow-lg rounded-10">
           </div>
 
         </div>
         <div class="d-md-flex align-items-center justify-content-center mt-5" data-aos="fade-up"
-          data-aos-duration="1000" data-aos-delay="600">
+          data-aos-duration="1000" data-aos-delay="400">
           <img src="./assets/images/anfani_OST.png" alt="" class="shadow-lg rounded-10">
         </div>
       </div>
     </section>
 
     <!--Requirements-->
-    <section class="bg_vibrant_blue section-sm-ptb" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
+    <section class="bg_vibrant_blue section-sm-ptb" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600">
       <div class="container">
         <div class="row align-items-center mb-5">
           <div class="col-lg-6">
