--- a/aupost.html
+++ b/aupost.html
@@ -18,10 +18,10 @@
 <body>
   <div class="overflow-hidden">
     <div class="bg__gray-2 position-relative">
-        <nav class="navbar navbar-expand-lg wrapper__navbar position-relative z-3 sticky-top" data-aos="fade-down"
+      <nav class="navbar navbar-expand-lg wrapper__navbar position-relative z-3 sticky-top" data-aos="fade-down"
         data-aos-duration="1000" ddata-aos-delay="300">
         <div class="container position-relative">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <img src="./assets/images/LOGO.svg" alt="" />
           </a>
           <button class="navbar-toggler nav__button position-relative" type="button" data-toggle="collapse"
@@ -31,10 +31,10 @@
             <span></span>
             <span></span>
           </button>
-  
+
           <div class="collapse navbar-collapse wrapper__navbar-menu center " id="navbarSupportedContent">
             <ul class="navbar-nav menu__center">
-  
+
               <li class="nav-item">
                 <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 active"
                   href="index.html">
@@ -42,26 +42,33 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1" href="#about">
+                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1"
+                  href="index.html#about">
                   about me
                 </a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 dropdown-toggle"
+                  href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                  aria-expanded="false">
                   Portfolio Projects
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="projects.html">All</a>
-                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="projects.html#hardware-projects">Hardware</a>
-                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="projects.html#digital-projects">Digital</a>
-                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="projects.html#fullstack-projects">Fullstack</a>
-                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href= "">Design (Coming soon)</a>
+                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
+                    href="projects.html#hardware-projects">Hardware</a>
+                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
+                    href="projects.html#digital-projects">Digital</a>
+                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1"
+                    href="projects.html#fullstack-projects">Fullstack</a>
+                  <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="">Design (Coming
+                    soon)</a>
                 </div>
               </li>
             </ul>
           </div>
-  
-  
+
+
         </div>
       </nav>
       <!--Project details-->
@@ -157,10 +164,12 @@
               </div>
               <div class="content col-12 col-md-6 col-lg-5 ">
                 <div>
+                  <a href="#overview" class="no-color-change">
                   <p class="font__size--20 bold  mb-2">
                     Find out more
                   </p>
                   <img src="./assets/images/Line 1.png" class="d-none d-md-block" alt="" />
+                </a>
                 </div>
               </div>
             </div>
@@ -172,7 +181,7 @@
 
 
     <!--Overview-->
-    <section>
+    <section id="overview">
       <div class="container ">
         <div class="text-center">
           <h2 class="bold font__size--40 text__40-1024 text__40-mm project-section-h-p" data-aos="fade-up"
@@ -187,8 +196,9 @@
               The Customer
             </h3>
             <p>
-              Australia Post, the government-owned postal service, also offers various retail services, including
-              technology products like mobile phones. It also provides vital eCommerce and digital solutions
+              Australia Post, the national postal service, provides a wide range of retail services beyond just postage.
+              These include technology products such as mobile phones, as well as crucial e-commerce and digital
+              solutions for businesses and individuals.
             </p>
             </p>
           </div>
@@ -213,8 +223,9 @@
                 Project Goals
               </h3>
               <p class="color__white">
-                Our project aimed to expand the product offerings on our website by introducing an affordable 4G mobile
-                phone, catering to the growing demand for budget-friendly smartphones.
+                Our project directly supported Australia Post's goal of expanding product offerings on their website. We
+                focused on introducing an affordable 4G mobile phone to meet the increasing demand for budget-friendly
+                smartphones.
               </p>
             </div>
             <div class="col-md-7 col-lg-6 p-5 d-lg-none">
@@ -285,11 +296,11 @@
               Research
             </h3>
             <p>
-              I employed a customer matrix, leveraging GFK data, to identify gaps in the market. By analyzing the
-              relationship between phone prices and sales volume, we strategically pinpointed opportunities to introduce
-              new models that offered either superior value, a more competitive price, or both, while avoiding
-              oversaturated market segments. This data-driven approach allowed us to position new products effectively
-              and maximize their potential for success.
+              I employed a customer matrix, leveraging GfK data, to identify gaps in the market. By analyzing the
+              relationship between phone prices, user value, and sales volume, we strategically pinpointed opportunities
+              to introduce new models. These models would offer either superior value, a more competitive price, or
+              both, all while avoiding oversaturated market segments. This data-driven approach allowed us to position
+              new products effectively and maximize their potential for success.
             </p>
             </p>
           </div>
@@ -336,8 +347,8 @@
               <p class="color__white">
                 Despite a small team, I effectively managed the project, collaborating seamlessly with compliance,
                 quality control, technical teams and manufacturers . I maintained meticulous organization, ensured
-                milestones were met,
-                and spearheaded compliance and certification efforts. Additionally, I played a hands-on role in
+                milestones were met, and spearheaded compliance and certification efforts. Additionally, I played a
+                hands-on role in
                 designing the packaging, marketing collateral, and even the phone's boot-up screens.
               </p>
             </div>
@@ -361,7 +372,7 @@
             </h3>
             <p>
               I designed the packaging, creating assets in Illustrator and Photoshop, and then visualized the final
-              product with a 3D mockup in 3ds Max to gain stakeholder approval. Final design aspects, such as gloss,
+              product with a 3D render. Final design aspects, such as gloss,
               were layered into the file for production and sent to ODM
             </p>
             <a href="#!" class="d-flex align-items-center bold font__size--16 text__16-1024 no-color-change">Coming
@@ -384,7 +395,7 @@
         </div>
       </div>
     </section>
-    
+
 
     <!--Manual  Screen Savers and Boot up screens-->
     <section class="section-sm-ptb">
@@ -398,9 +409,9 @@
               Manual, Screen Savers and Boot up screens
             </h3>
             <p>
-              Through UX design and user testing, I crafted a customizable merchant micro-site platform, carefully
-              documenting requirements for the development team. The feature empowers businesses to preserve brand
-              consistency while delivering an intuitive and user-friendly online ordering experience to their customers.
+              I had hands-on involvement in creating the packaging, writing and designing the user manual, and preparing
+              regulatory documents. I also designed the boot-up screen, ensuring all elements adhered to Google's
+              requirements.
             </p>
             <a href="#!" class="d-flex align-items-center bold font__size--16 text__16-1024 no-color-change">Coming
               Soon
@@ -419,7 +430,7 @@
     </section>
 
 
-<!--Outcome-->
+    <!--Outcome-->
     <section class="section-sm-ptb pt-1">
       <div class="container ">
         <div class="text-center">
@@ -435,7 +446,8 @@
               Plus8 Touch 5
             </h3>
             <p>
-              The Plus 8 Touch 5 launched successfully in Australia, available for purchase on both Australia Post website and Amazon.
+              The Plus 8 Touch 5 launched successfully in Australia, available for purchase on both Australia Post
+              website and Amazon.
             </p>
             </p>
           </div>
@@ -446,7 +458,7 @@
         </div>
       </div>
     </section>
-     <!--Contact me-->
+    <!--Contact me-->
     <section class="p-0">
       <div class="container">
         <div class="wrapper__contat-us position-relative bg__softblue" data-aos="fade-up" data-aos-duration="1000"
