--- a/index.html
+++ b/index.html
@@ -59,8 +59,6 @@
             </li>
           </ul>
         </div>
-
-
       </div>
     </nav>
 
@@ -73,7 +71,7 @@
               </p>
               <h1 class="font__size--65 text__60-1024 text__60-sm text__60-xxs bold my-3">
                 An Experienced <br class="d-md-block d-lg-none" />
-                <span class="position-relative">product manager
+                <span class="position-relative">Product Manager
                   <img src="./assets/images/Rectangle 5.png" class="path__1" alt="" />
                 </span>
                 <br class="d-md-block" />
@@ -575,7 +573,7 @@
                       <div class="row justify-content-between">
                         <div
                           class="col-12 col-sm-6 col-lg-2 d-flex justify-content-center align-items-center cert-logo px-0">
-                          <img src="./assets/images/code_institute.svg" alt="" class="">
+                          <img src="./assets/images/code_institute_coming_soon.svg" alt="" class="">
                         </div>
                         <div
                           class="col-12 col-sm-6 col-lg-2 d-flex justify-content-center align-items-center cert-logo px-0">
@@ -617,77 +615,77 @@
                       </div>
                       <!--Tools logos-->
 
-                      <div class="row  col-md-6 d-flex justify-content-between justify-content-lg-start">
+                      <div class="row  col-md-6 d-flex justify-content-between justify-content-md-start">
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/html_logo.svg" alt="" class=" ">
                         </div>
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/css_logo.svg" alt="" class=" ">
                         </div>
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/bootstrap_logo.svg" alt="" class=" ">
                         </div>
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/python_logo.svg" alt="" class=" ">
                         </div>
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/js_logo.svg" alt="" class=" ">
                         </div>
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/jira.svg" alt="" class=" ">
                         </div>
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/confluence.svg" alt="" class=" ">
                         </div>
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/github_v2.svg" alt="" class=" ">
                         </div>
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/gitpod.svg" alt="" class=" ">
                         </div>
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/heroku.svg" alt="" class=" ">
                         </div>
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/notion.svg" alt="" class=" ">
                         </div>
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/project.svg" alt="" class=" ">
                         </div>
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/visio.svg" alt="" class=" ">
                         </div>
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/power_point.svg" alt="" class=" ">
                         </div>
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/figma.svg" alt="" class=" ">
                         </div>
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/photoshop.svg" alt="" class=" ">
                         </div>
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/illustrator.svg" alt="" class=" ">
                         </div>
                         <div
-                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                          class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                           <img src="./assets/images/3dmax.svg" alt="" class=" ">
                         </div>
                       </div>
