--- a/tasker.html
+++ b/tasker.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg wrapper__navbar position-relative z-3 sticky-top" data-aos="fade-down"
         data-aos-duration="1000" ddata-aos-delay="300">
         <div class="container position-relative">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <img src="./assets/images/LOGO.svg" alt="" />
           </a>
           <button class="navbar-toggler nav__button position-relative" type="button" data-toggle="collapse"
@@ -42,7 +42,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1" href="#about">
+                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1" href="index.html#about">
                   about me
                 </a>
               </li>
@@ -90,7 +90,7 @@
               <div class="content col-md-6 col-lg-5">
                 <p class="project-detail-heading ">Tasks</p>
                 <p class="project-detail">
-                  Ideation, priorotisation, requirements, UX design, development, Testing.
+                  Ideation, prioritisation, requirements, UX design, development, Testing.
               </div>
               <div class="content col-12 col-md-6 col-lg-4">
                 <p class="project-detail-heading ">Time</p>
@@ -109,61 +109,61 @@
                 <!--Tools-->
                 <div
                   class="row d-md-flex align-items-md-center justify-content-md-start justify-content-center flex-wrap ">
-                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/html_logo.svg" alt="" class=" ">
                   </div>
-                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/css_logo.svg" alt="" class=" ">
                   </div>
-                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/bootstrap_logo.svg" alt="" class=" ">
                   </div>
-                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/python_logo.svg" alt="" class=" ">
                   </div>
-                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/js_logo.svg" alt="" class=" ">
                   </div>-->
-                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/github_v2.svg" alt="" class=" ">
                   </div>
-                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/gitpod.svg" alt="" class=" ">
                   </div>
-                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/heroku.svg" alt="" class=" ">
                   </div>
-                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/jira.svg" alt="" class=" ">
                   </div>-->
-                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <div class="col-4 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/confluence.svg" alt="" class=" ">
                   </div>
-                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/notion.svg" alt="" class=" ">
                   </div>-->
-                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/project.svg" alt="" class=" ">
                   </div>-->
-                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/visio.svg" alt="" class=" ">
                   </div>-->
-                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/excel.svg" alt="" class=" ">
                   </div>-->
-                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/power_point.svg" alt="" class=" ">
                   </div>-->
-                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/figma.svg" alt="" class=" ">
                   </div>
-                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/photoshop.svg" alt="" class=" ">
                   </div>
-                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/illustrator.svg" alt="" class=" ">
                   </div>-->
-                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0">
+                  <!--<div class="col-3 col-md-3 col-lg-2 d-flex justify-content-center align-items-center skill-logo px-0 mx-0">
                     <img src="./assets/images/3dmax.svg" alt="" class=" ">
                   </div>-->
                 </div>
@@ -186,10 +186,12 @@
               </div>
               <div class="content col-12 col-md-6 col-lg-5 ">
                 <div>
+                  <a href="#overview" class="no-color-change">
                   <p class="font__size--20 bold  mb-2">
                     Find out more
                   </p>
                   <img src="./assets/images/Line 1.png" class="d-none d-md-block" alt="" />
+                </a>
                 </div>
               </div>
             </div>
@@ -201,7 +203,7 @@
 
 
     <!--Overview-->
-    <section class="mt-md-5 mb-md-5">
+    <section class="mt-md-5 mb-md-5" id="overview">
       <div class="container justify-content-center align-items-center ">
         <div class="text-center">
           <h2 class="bold font__size--40 text__40-1024 text__40-mm project-section-h-p" data-aos="fade-up"
@@ -250,7 +252,7 @@
                 full-stack development, Agile practices, data modeling, web security, testing, and cloud deployment.
               </p>
             </div>
-            <div class="col-md-7 col-lg-6 p-5 d-lg-none">
+            <div class="col-md-7 col-lg-6 d-lg-none">
               <img src="./assets/images/tasker_desktop_and_mobile_landing.png" alt="" />
             </div>
           </div>
@@ -278,12 +280,11 @@
               User Story map
             </h3>
             <p>
-              I decided to prioritize features by listing out potential requirements for a task manager, considering the
-              user personas of those who might need one. I determined that an app focusing on simple task management for
+              Taking into account the user persona I decided to prioritize features by listing out potential requirements for a task manager. I determined that an app focusing on simple task management for
               people who want to track chores or important dates would be my Minimum Viable Product (MVP).
             </p>
             <p>
-              I outlined these potential features in a user story map. Then, used the Impact Effort frame work and
+              I outlined these potential features in a user story map. Then, using the Impact Effort frame work and
               MOSCOW, I decided which features would be included in the initial release for the MVP, which would come
               next, and which would be developed later.
             </p>
