--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
       <nav class="navbar navbar-expand-lg wrapper__navbar position-relative z-3 sticky-top" data-aos="fade-down"
         data-aos-duration="1000" ddata-aos-delay="300">
         <div class="container position-relative">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <img src="./assets/images/LOGO.svg" alt="" />
           </a>
           <button class="navbar-toggler nav__button position-relative" type="button" data-toggle="collapse"
@@ -43,7 +43,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1" href="#about">
+                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1" href="index.html#about">
                   about me
                 </a>
               </li>
@@ -76,15 +76,14 @@
               </p>
               <h1 class="font__size--65 text__60-1024 text__60-sm text__60-xxs bold my-3" data-aos="fade-up"
                 data-aos-duration="1000" data-aos-delay="400">
-                Check out my portfolio
+                Check out my Portfolio
                 <span class="position-relative">Projects
                   <img src="./assets/images/Rectangle 5.png" class="path__1" alt="" />
                 </span>
               </h1>
               <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600"
                 class="medium font__size--16 text__16-1024 color__gray-1 mb-4">
-                Welcome to my digital showcase! Explore my passion for crafting innovative solutions through hardware,
-                digital products, full-stack development, and UX design.
+                Welcome to my portfolio! Discover my passion for creating innovative solutions through hardware, software, and UX design.
 
               </p>
             </div>
@@ -529,7 +528,7 @@
         <div class="row align-items-stretch">
           <!--Code Institute-->
           <div class="col-12">
-            <div class="wrapper__project bg_orange_v2 mb-5 " data-aos="fade-left" data-aos-duration="1000"
+            <div class="wrapper__project bg_orange_v2 mb-5 " data-aos="fade-right" data-aos-duration="1000"
               data-aos-delay="200">
               <div class="row justify-content-between justify-content-xl-center">
                 <div class="col-12 col-md-6 col-xl-6 p-lg-5 m-0 p-0 pb-3 m-md-2 align-items-center">
